# CloudPoints

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test-setup.sh
.cfenv/: config.json
.claude/: launch.json
.github/workflows/: ci.yml  cleanup-preview.yml  deploy-preview.yml  deploy-production.yml
apps/admin/: package.json  wrangler.toml
apps/admin/src/: index.ts
apps/backend/: .env.example  Dockerfile  agent.py  apple_music.py  conftest.py  d1_client.py  database.py  error_codes.py  init_db.py  main.py  models.py  pyproject.toml  state.py  test_agent.py  test_agent_live.py  test_agent_multiturn.py  test_api.py  test_state.py  title_generator.py
apps/backend-worker/: package.json  wrangler.toml
apps/backend-worker/src/: index.ts
apps/backend/migrations/: 002_enable_rls.sql  002_waitlist.sql
apps/gateway/: package.json  wrangler.preview.toml  wrangler.toml
apps/gateway/src/: d1-handlers.ts  index.ts  session.ts
apps/gateway/src/__tests__/: gateway.test.ts
apps/landing/: .env.example  astro.config.mjs  package.json  tailwind.config.js  wrangler.preview.toml  wrangler.toml
apps/landing/.astro/: settings.json
apps/landing/public/: robots.txt
apps/landing/src/components/: Features.astro  (+4 more)
apps/web/: .env.example  index.html  package.json  tailwind.config.js  vitest.config.ts  wrangler.preview.toml
apps/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
docs/sop/: cloudflare-secrets.md  deploy.md  github-ci-setup.md
supabase/: config.toml
(+53 files in other folders)
