[project]
name = "backend"
version = "0.1.0"
description = "Music Agent Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.76",
    "langgraph-checkpoint-postgres>=2.0.12",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.45",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "aiosqlite>=0.22.1",
    "psycopg[binary]>=3.1.0",
    "supabase>=2.28.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "llm: tests that require a real LLM API key (OPENAI_API_KEY)",
]
